--- a/iOS/MusicFinder/DetailMusicVC.xib
+++ b/iOS/MusicFinder/DetailMusicVC.xib
@@ -15,6 +15,7 @@
                 <outlet property="textField" destination="Du2-kz-mCK" id="vKs-VF-4SL"/>
                 <outlet property="titleLabel" destination="fCj-4E-jhn" id="HQq-IT-hjc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="wrongLabel" destination="Pu3-sV-Fld" id="QN8-kX-hjX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Du2-kz-mCK">
-                    <rect key="frame" x="12.5" y="241.5" width="350" height="40"/>
+                    <rect key="frame" x="12.5" y="181.5" width="350" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2Hr-nm-mFP"/>
                         <constraint firstAttribute="width" constant="350" id="p27-wK-6yj"/>
@@ -33,7 +34,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSW-1c-bX9">
-                    <rect key="frame" x="62.5" y="311.5" width="250" height="40"/>
+                    <rect key="frame" x="62.5" y="251.5" width="250" height="40"/>
                     <color key="backgroundColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="OZO-qe-jsS"/>
@@ -48,8 +49,14 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCj-4E-jhn">
-                    <rect key="frame" x="166.5" y="100" width="42.5" height="21.5"/>
+                    <rect key="frame" x="166.5" y="80" width="42.5" height="21.5"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                    <color key="textColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mauvaise réponse !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pu3-sV-Fld">
+                    <rect key="frame" x="109.5" y="151.5" width="157.5" height="20"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -58,9 +65,11 @@
             <constraints>
                 <constraint firstItem="fCj-4E-jhn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3VH-hx-7dh"/>
                 <constraint firstItem="HSW-1c-bX9" firstAttribute="top" secondItem="Du2-kz-mCK" secondAttribute="bottom" constant="30" id="8cY-1N-Pdh"/>
-                <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="fCj-4E-jhn" secondAttribute="bottom" constant="120" id="Nfh-oc-DVl"/>
+                <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="Pu3-sV-Fld" secondAttribute="bottom" constant="10" id="Cgl-0l-BtG"/>
+                <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="fCj-4E-jhn" secondAttribute="bottom" constant="80" id="Nfh-oc-DVl"/>
                 <constraint firstItem="Du2-kz-mCK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cqB-KE-hKu"/>
-                <constraint firstItem="fCj-4E-jhn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="tUk-FX-4g2"/>
+                <constraint firstItem="fCj-4E-jhn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="tUk-FX-4g2"/>
+                <constraint firstItem="Pu3-sV-Fld" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wRN-je-ptg"/>
                 <constraint firstItem="HSW-1c-bX9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ySJ-Ku-v9O"/>
             </constraints>
         </view>
