--- a/iOS/MusicFinder/DetailMusicVC.xib
+++ b/iOS/MusicFinder/DetailMusicVC.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="submitButton" destination="HSW-1c-bX9" id="30Q-iF-n98"/>
                 <outlet property="textField" destination="Du2-kz-mCK" id="vKs-VF-4SL"/>
+                <outlet property="timerLabel" destination="wuC-do-Rez" id="V2r-ve-thg"/>
                 <outlet property="titleLabel" destination="fCj-4E-jhn" id="HQq-IT-hjc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="wrongLabel" destination="Pu3-sV-Fld" id="QN8-kX-hjX"/>
@@ -24,7 +25,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="titre de la musique" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Du2-kz-mCK">
-                    <rect key="frame" x="12.5" y="181.5" width="350" height="40"/>
+                    <rect key="frame" x="12.5" y="173" width="350" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2Hr-nm-mFP"/>
                         <constraint firstAttribute="width" constant="350" id="p27-wK-6yj"/>
@@ -34,7 +35,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSW-1c-bX9">
-                    <rect key="frame" x="62.5" y="251.5" width="250" height="40"/>
+                    <rect key="frame" x="62.5" y="243" width="250" height="40"/>
                     <color key="backgroundColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="OZO-qe-jsS"/>
@@ -49,26 +50,35 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCj-4E-jhn">
-                    <rect key="frame" x="166.5" y="80" width="42.5" height="21.5"/>
+                    <rect key="frame" x="166.5" y="20" width="42.5" height="21.5"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                     <color key="textColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mauvaise réponse !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pu3-sV-Fld">
-                    <rect key="frame" x="109.5" y="151.5" width="157.5" height="20"/>
+                    <rect key="frame" x="109.5" y="143" width="157.5" height="20"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" red="0.89411764709999997" green="0.2901960784" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuC-do-Rez">
+                    <rect key="frame" x="174.5" y="71.5" width="28" height="30"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                    <color key="textColor" red="0.70156133359999995" green="0.23077887699999999" blue="0.32338519319999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="0.82745098039999998" green="0.90980392160000001" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="Pu3-sV-Fld" secondAttribute="bottom" constant="10" id="0BP-gg-pQ4"/>
                 <constraint firstItem="fCj-4E-jhn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3VH-hx-7dh"/>
                 <constraint firstItem="HSW-1c-bX9" firstAttribute="top" secondItem="Du2-kz-mCK" secondAttribute="bottom" constant="30" id="8cY-1N-Pdh"/>
                 <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="Pu3-sV-Fld" secondAttribute="bottom" constant="10" id="Cgl-0l-BtG"/>
-                <constraint firstItem="Du2-kz-mCK" firstAttribute="top" secondItem="fCj-4E-jhn" secondAttribute="bottom" constant="80" id="Nfh-oc-DVl"/>
+                <constraint firstItem="wuC-do-Rez" firstAttribute="top" secondItem="fCj-4E-jhn" secondAttribute="bottom" constant="30" id="Qjz-HM-eY6"/>
                 <constraint firstItem="Du2-kz-mCK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cqB-KE-hKu"/>
-                <constraint firstItem="fCj-4E-jhn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="tUk-FX-4g2"/>
+                <constraint firstItem="wuC-do-Rez" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="il6-ju-7Tt"/>
+                <constraint firstItem="fCj-4E-jhn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="tUk-FX-4g2"/>
+                <constraint firstItem="Pu3-sV-Fld" firstAttribute="top" secondItem="wuC-do-Rez" secondAttribute="bottom" constant="41" id="vjc-8X-cHz"/>
                 <constraint firstItem="Pu3-sV-Fld" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wRN-je-ptg"/>
                 <constraint firstItem="HSW-1c-bX9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ySJ-Ku-v9O"/>
             </constraints>
